Fix div height to allow easier horizontal scroll

--- a/static/benchmarks/css/leaderboard/leaderboard.sass
+++ b/static/benchmarks/css/leaderboard/leaderboard.sass
@@ -9,11 +9,12 @@
 .leaderboard-container
   padding: 20px
   display: block
-  overflow-x: auto
+  overflow: visible
   max-width: none
   width: 100%
   margin: 0
   box-sizing: border-box
+  min-height: calc(100vh - 300px)
 
   // ======================
   // UTILITY CLASSES (scoped)
